# variable2static-font-converter

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  main.py
src/lib/: processors.py  ui.py
src/scripts/: variable_to_static_font_converter.py
src/variable2static/: __init__.py
src/variable2static/lib/: processors.py  weights.py
