[project]
name = "variable2static-font-converter"
version = "0.1.0"
requires-python = ">=3.13"
authors = [{ name = "Jassiel O.", email = "jassielovando@protonmail.com" }]
dependencies = [
  "findsystemfontsfilename>=0.3.2",
  "fonttools>=4.59.1",
]

[project.scripts]
dev = "variable2static:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "variable2static"
